# karriere-at-scraper

./: LICENSE  README.md  pyproject.toml
karriere_at_jobs_analyzer/: __init__.py  charts_locales.py  dataframe_salary_processing.py
karriere_at_parser/: __init__.py  main.py
karriere_at_scraper/: __init__.py  main.py
karriere_at_scraper/analyser/: __init__.py  charts_locales.py  dataframe_salary_processing.py  job_types_processing.py
karriere_at_scraper/scraper/: __init__.py  main.py
