[project]
name = "karriere-at-scraper"
version = "1.1.2"
description = "A scraper for job listings from karriere.at"
authors = [
    {name = "Boris Timashov",email = "boristimashov21@gmail.com"}
]
license = {text = "EUPL"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.30.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "free-proxy (>=1.1.3,<2.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["karriere_at_scraper", "karriere_at_jobs_analyzer"]
